--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
     }
+
     configurations.all {
         resolutionStrategy {
             failOnVersionConflict()
